
noinst_LIBRARIES = libsam.a

libsam_a_SOURCES = \
           bam.h        bam.c \
           bam_endian.h \
           bam_import.c \
           bgzf.h       bgzf.c \
           khash.h \
           kseq.h \
           kstring.h    kstring.c \
           sam.h        sam.c \
           sam_header.h sam_header.c

EXTRADIST = COPYING

